doc: final touches :sparkles:

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -17,12 +17,37 @@
   year={1999}
 }
 
+@article{mcenery2000emille,
+  title={EMILLE: Building a corpus of South Asian languages},
+  author={McEnery, Anthony and Baker, Paul and Gaizauskas, Rob and Cunningham, Hamish},
+  journal={VIVEK-BOMBAY},
+  volume={13},
+  number={3},
+  pages={22--28},
+  year={2000},
+  publisher={National center for software technology}
+}
+
+
 @inproceedings{mihalcea2003evaluation,
   title={An evaluation exercise for word alignment},
   author={Mihalcea, Rada and Pedersen, Ted},
   booktitle={Proceedings of the HLT-NAACL 2003 Workshop on Building and using parallel texts: data driven machine translation and beyond},
   pages={1--10},
   year={2003}
+}
+
+@inproceedings{koehn2005epc,
+  author = {Koehn, Philipp},
+  biburl = {https://www.bibsonomy.org/bibtex/205e5fa13fd7ba7992aedfe3514379a1f/unhammer},
+  booktitle = {Conference Proceedings: the tenth Machine Translation Summit},
+  keywords = {Corpus Europarl MT Master},
+  organization = {AAMT},
+  pages = {79--86},
+  publisher = {AAMT},
+  title = {{Europarl: A Parallel Corpus for Statistical Machine Translation}},
+  url = {http://mt-archive.info/MTS-2005-Koehn.pdf},
+  year = {2005}
 }
 
 @article{varga2007parallel,
