--- a/doc/sections/4-translation.tex
+++ b/doc/sections/4-translation.tex
@@ -67,7 +67,7 @@ The paper~\cite{dyer-etal-2013-simple} has more detailed information on training
 
 \subsubsection{Eflomal algorithm}
 
-The Eflomal alignment algorithm~\cite{ostling2016efficient}, presented in 2016, defines itself as an \emph{Efficient Low-Memory Aligner}. Its code is available \href{https://github.com/robertostling/eflomal}{on Github}, and it is a word alignment tool based on \emph{Efmaral}, with some improvements, such as more compact data structures, yielding a lower memory requirement, and the fact that the estimation of alignment variable marginals is done one sentence at a time, which also saves a lot of memory at no detectable cost in accuracy. Eflomal differs from Fastalign in the sense that it is based on a hidden Markov Model, as opposite to Fastalign which is based on an IBM model. Eflomal also requires the simmetrization step GDFA, and has historically had better results than Fastalign. Technical details relevant to both \emph{Efmaral} and \emph{Eflomal} can be found in the cited article.
+The Eflomal alignment algorithm~\cite{ostling2016efficient}, presented in 2016, defines itself as an \emph{Efficient Low-Memory Aligner}. It is a Bayesian model with Markov Chain Monte Carlo inference, and it is claimed to outperform Fastalign on speed and quality. Its code is available \href{https://github.com/robertostling/eflomal}{on Github}, and it is a word alignment tool based on \emph{Efmaral}, with some improvements, such as more compact data structures, yielding a lower memory requirement, and the fact that the estimation of alignment variable marginals is done one sentence at a time, which also saves a lot of memory at no detectable cost in accuracy. Eflomal differs from Fastalign in the sense that it is based on a hidden Markov Model, as opposite to Fastalign which is based on an IBM model. Eflomal also requires the simmetrization step GDFA, and has historically had better results than Fastalign. Technical details relevant to both \emph{Efmaral} and \emph{Eflomal} can be found in the cited article.
 
 \subsection{Alignment metrics}\label{tra:metrics}
 
