--- a/doc/sections/9-conclusion.tex
+++ b/doc/sections/9-conclusion.tex
@@ -6,7 +6,7 @@
 
 \chapter{Conclusion}\label{ch:conclusion}
 
-This thesis has broadly analysed all tokenization algorithms, while explaining BPE in depth providing examples, code snippets to make the algorithm understandable, and adding use cases, resources and references. The replication process of the performance of BPE has also been minutely detailed. Regarding evaluation methods, the background of which has been explained in the literature review section, primarily Fastalign has been used, clarifying in detail how it works.
+This thesis has broadly analysed all tokenization algorithms, while explaining BPE in depth providing examples, code snippets to make the algorithm understandable, and adding use cases, resources and references. The replication process of the performance of BPE has also been minutely detailed. The pipeline of implementing word alignments on BPE units has also been implemented, as well as a mapping algorithm from subword alignments to word alignments. Regarding evaluation methods, the background of which has been explained in the literature review section, primarily Fastalign has been used, clarifying in detail how it works.
 
 Additionally, the improvement over BPE, BPE-dropout has also been meticulously described, its algorithm outlined, the improvement over BPE illustrated, its results replicated, and its own drawbacks exposed as well. It has been shown that by iterating over some of the hyperparameters that BPE-dropout uses, its results have been slightly improved by 2\%.
 
