--- a/doc/sections/abstract.tex
+++ b/doc/sections/abstract.tex
@@ -10,6 +10,6 @@
     \vspace{1cm}
 \end{center}
 
-Historically, many ways have been used to feed language to machines. Separating sentences, separating words, characters, each has its own advantages and drawbacks. In recent times, subword units have gained popularity, as a middle point between words and characters. However, this is based on the assumption that sentences are separated into words, that is, that space is a separating factor. This thesis explores the research done until the time of writing, describing various tokenization methods, replication of BPE and BPE dropout results, and also incorporates the possibility to create BPE units without spaces, as well as an improvement over the original BPE algorithm.
+Historically, many ways have been used to feed language to machines. Separating sentences, separating words, characters, each has its own advantages and drawbacks. In recent times, subword units have gained popularity, as a middle point between words and characters. However, this is based on the assumption that sentences are separated into words, that is, that space is a separating factor. This thesis explores the research done until the time of writing, describing various tokenization methods, a pipeline including the implementation and replication of BPE and BPE dropout results, a word alignment module, a mapping from subword alignments to word alignments, and also incorporates the possibility to create BPE units without spaces, as well as an improvement over the original BPE algorithm.
 
 % end of file
